--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 
 <HEAD>
 
-<TITLE>Your Title Here 2</TITLE>
+<TITLE>Your Title Here 3</TITLE>
   
- try {
+ <script>
+  try {
        var akPush = new AKPush()
      akPush.initSubscription() // Show push subscribe browser popup
      console.log("init sub")
  } catch (e) {
      console.log("err: ", e)
  }
+   </script>
 
 </HEAD>
 
